# NES_Emu

./: Cargo.toml
src/: buffer.rs  bus.rs  cpu.rs  display.rs  input.rs  main.rs  ppu.rs  renderer.rs  rom.rs  shader.rs  shader_program.rs  texture.rs  vertex_array.rs
src/cpu/: opcodes.rs  test.rs
src/ppu/: two_write_reg.rs
test_roms/: sprites.nes
