[package]
name = "NES_Emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"
futures = "0.3.28"
gl = "0.14.0"
glium = "0.32.1"
glutin = "0.30.10"
image = "0.24.7"
lazy_static = "1.4.0"
rand = "0.8.5"
rfd = "0.11.4"
thiserror = "1.0.46"

[profile.release]
lto = true